@@ -2,6 +2,7 @@
 v5.0.22-git
 -----------
 
+[mms] Only allow display of basic image types directly in browser.
 [jan] Update Turkish translation (İstanbul Technical University).
 [jan] Re-add option to report messages as spam/ham through redirection.
 [jan] Update Swedish translation (Jakob Alvermark
